CNT Project FINAL

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
       height: 480px;
     }
     body{
-      background-image: url('./static/background.jpg');
+      background-image: url('./static/background.png');
+      background-repeat: no-repeat;
+      background-size: cover;
       color: white;
     }
   </style>
