--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
   <h1>Welcome!</h1>
   <img src="./static/networking.jpg" alt="Class Logo" width="50%">
-  <p><strong>My name is Jose Hernandez and this is my solution for Assignment 10 & 11</strong></p>
+  <p><strong>Thanks to the help of a lot of googling and some classmates, I managed to get app this deployed! This is my project for CNT 4713</strong></p>
   <br>
   <a class="btn btn-secondary" href="{{url_for('login')}}" role="button">Login with Google</a>
 {% endblock %}
