--- a/templates/live_feed.html
+++ b/templates/live_feed.html
@@ -2,9 +2,9 @@
 {% block content %}
     <h1><strong>Hello {{name}}!</strong></h1>
     <h2><strong>Webcam Feed</strong></h2>
-    <p></strong>My ugly mug LIVE!</p>
+    <p></strong>Hiya!</p>
     <div class="conainer">
-       <img src="https://markojudas.ngrok.io/video_feed" width="50%" alt="You just missed the show ;)">
+       <img src="https://a18a539ff3f7.ngrok.io/video_feed" width="50%" alt="NO VIDEO ACTIVE">
        <br><br>
        <a class='btn btn-secondary' href="{{url_for('index')}}" role="button">Go Back</a>
    </div>
