--- a/templates/staticfeed.html
+++ b/templates/staticfeed.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Hello {{name}}!</h1>
-    <h2>Here's a video for you!</h2>
-    <p>I'm the dude with the hat!</p>
+    <h1>Hello, {{name}}!</h1>
+    <h2>Here's a frög</h2>
     <br>
-    <video controls>
-      <source src="./static/fallofheroes.mp4" type="video/mp4">
+    <video controls autoplay loop>
+      <source src="./static/frog.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <br><br>
