CNT Final FINAL

--- a/templates/live_feed.html
+++ b/templates/live_feed.html
@@ -4,7 +4,7 @@
     <h2><strong>Webcam Feed</strong></h2>
     <p></strong>Hiya!</p>
     <div class="conainer">
-       <img src="https://a18a539ff3f7.ngrok.io/video_feed" width="50%" alt="NO VIDEO ACTIVE">
+       <img src="http://45f3812037e8.ngrok.io/video_feed" width="50%" alt="NO VIDEO ACTIVE">
        <br><br>
        <a class='btn btn-secondary' href="{{url_for('index')}}" role="button">Go Back</a>
    </div>
